; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-search.c_init_global_age_query_data.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-search.c_init_global_age_query_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i64, i64, i32 }

@now = common dso_local global i64 0, align 8
@LOCAL_TIMEZONE_SHIFT_MINUTES = common dso_local global i32 0, align 4
@global_age_day = common dso_local global i32 0, align 4
@global_age_month = common dso_local global i64 0, align 8
@global_age_year = common dso_local global i64 0, align 8
@AD_RECOMPUTE_INTERVAL = common dso_local global i64 0, align 8
@global_future_age_day = common dso_local global i32 0, align 4
@global_future_age_month = common dso_local global i64 0, align 8
@global_future_age_year = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @init_global_age_query_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_global_age_query_data() #0 {
  %1 = alloca %struct.tm*, align 8
  %2 = alloca i64, align 8
  %3 = load i64, i64* @now, align 8
  %4 = load i32, i32* @LOCAL_TIMEZONE_SHIFT_MINUTES, align 4
  %5 = mul nsw i32 %4, 60
  %6 = sext i32 %5 to i64
  %7 = add nsw i64 %3, %6
  store i64 %7, i64* %2, align 8
  %8 = call %struct.tm* @gmtime(i64* %2)
  store %struct.tm* %8, %struct.tm** %1, align 8
  %9 = load %struct.tm*, %struct.tm** %1, align 8
  %10 = getelementptr inbounds %struct.tm, %struct.tm* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 8
  store i32 %11, i32* @global_age_day, align 4
  %12 = load %struct.tm*, %struct.tm** %1, align 8
  %13 = getelementptr inbounds %struct.tm, %struct.tm* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = add nsw i64 %14, 1
  store i64 %15, i64* @global_age_month, align 8
  %16 = load %struct.tm*, %struct.tm** %1, align 8
  %17 = getelementptr inbounds %struct.tm, %struct.tm* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = add nsw i64 %18, 1900
  store i64 %19, i64* @global_age_year, align 8
  %20 = load i64, i64* @AD_RECOMPUTE_INTERVAL, align 8
  %21 = load i64, i64* %2, align 8
  %22 = add nsw i64 %21, %20
  store i64 %22, i64* %2, align 8
  %23 = call %struct.tm* @gmtime(i64* %2)
  store %struct.tm* %23, %struct.tm** %1, align 8
  %24 = load %struct.tm*, %struct.tm** %1, align 8
  %25 = getelementptr inbounds %struct.tm, %struct.tm* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 8
  store i32 %26, i32* @global_future_age_day, align 4
  %27 = load %struct.tm*, %struct.tm** %1, align 8
  %28 = getelementptr inbounds %struct.tm, %struct.tm* %27, i32 0, i32 1
  %29 = load i64, i64* %28, align 8
  %30 = add nsw i64 %29, 1
  store i64 %30, i64* @global_future_age_month, align 8
  %31 = load %struct.tm*, %struct.tm** %1, align 8
  %32 = getelementptr inbounds %struct.tm, %struct.tm* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = add nsw i64 %33, 1900
  store i64 %34, i64* @global_future_age_year, align 8
  ret void
}

declare dso_local %struct.tm* @gmtime(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
